[gd_scene load_steps=8 format=3 uid="uid://dv53lkd0nlsqn"]

[ext_resource type="Script" uid="uid://cdfdhlw5w53yk" path="res://Scripts/player.gd" id="1_cnkc8"]
[ext_resource type="AudioStream" uid="uid://dop6jcne7upst" path="res://assets/sonidos/clickboton.wav" id="2_i8vih"]
[ext_resource type="PackedScene" uid="uid://bxcbr7am1auj" path="res://assets/modelos3d/escape_the_backrooms_hazmat.glb" id="3_qgqwx"]
[ext_resource type="AudioStream" uid="uid://ddpp11t1f2p6" path="res://assets/sonidos/zoom_camara_cc0.wav" id="4_6njrx"]
[ext_resource type="AudioStream" uid="uid://ddrfbdyv3c4qe" path="res://assets/sonidos/pasos1_cc0.wav" id="5_cgfde"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cnkc8"]
height = 2.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6njrx"]
height = 1.5

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 9
script = ExtResource("1_cnkc8")
tiempo_pasos_caminando = 0.8

[node name="CollisionParado" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.262, 0)
shape = SubResource("CapsuleShape3D_cnkc8")

[node name="PivotCamara" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -0.137)

[node name="CameraPrincipal" type="Camera3D" parent="PivotCamara"]
unique_name_in_owner = true
current = true
far = 1500.0

[node name="RayCastMano" type="RayCast3D" parent="PivotCamara/CameraPrincipal"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -4)
collision_mask = 3

[node name="LuzLinterna" type="SpotLight3D" parent="PivotCamara/CameraPrincipal"]
light_energy = 4.0
light_volumetric_fog_energy = 0.1
spot_range = 14.359
spot_attenuation = 0.83
spot_angle = 40.5

[node name="SpotLight3D" type="SpotLight3D" parent="PivotCamara/CameraPrincipal"]
visible = false
light_energy = 6.0
spot_range = 6.355

[node name="Mano" type="Node3D" parent="PivotCamara"]

[node name="MarkerPosicionObjetos" type="Marker3D" parent="PivotCamara/Mano"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.14)

[node name="AudioSoltarObj" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_i8vih")

[node name="Skin" parent="." instance=ExtResource("3_qgqwx")]
transform = Transform3D(-1.3, 0, -1.9629454e-07, 0, 1.3, 0, 1.9629454e-07, 0, -1.3, 0, 0, 0.11075902)

[node name="AudioZoom" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_6njrx")

[node name="TimerCurarSanity" type="Timer" parent="."]
wait_time = 2.0

[node name="CollisionAgachado" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.78528696, 0)
shape = SubResource("CapsuleShape3D_6njrx")

[node name="AudioPasos" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_cgfde")

[node name="TimerPasos" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[connection signal="timeout" from="TimerCurarSanity" to="." method="_on_timer_curar_sanity_timeout"]
[connection signal="timeout" from="TimerPasos" to="." method="_on_timer_pasos_timeout"]
